playback_service/playback-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: playback-service
spec:
  type: NodePort
  selector:
    app: playback-service
  ports:
    - protocol: TCP
      port: 50053
      targetPort: 50053
